@@ -11,6 +11,8 @@ export(MannKendall)
 export(TaylorDiagram)
 export(TheilSen)
 export(airbaseFindCode)
+export(airbaseSplice)
+export(airbaseStats)
 export(aqStats)
 export(calcFno2)
 export(calcPercentile)
