@@ -14,7 +14,9 @@ Changes in openair 1.0-0 [2013-11-21]
 *	Allow modStat statistics to be chosen by user
 *	Needs to be >24 months to deseason in smoothTrend/TheilSen
 	(was >=)
-* Refine names returned by importADMS when used with .pst file
+* 	Refine names returned by importADMS when used with .pst file
+*	Fix trajectory code in appendix D in the manual (some function
+	arguments were not passed)
 
 Changes in openair 0.9-0 [2013-02-13]
 =====================================
